--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -30,16 +30,11 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
-#监听器,监听客户端跟服务器
+#监听器,监听客户端;若使用TLS/SSL,请在.ssl.conf中修改相关配置
 <bind address=""
       port="6667-6669"
       type="clients"
       free="yes">
-<bind address=""
-      port="7000"
-      type="servers"
-      free="yes">
-
 
 #-#-#-#-#-#-#-#-#-#-#-#-连接配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<connect>标签定义了一个类,当用户连接到服务器时,可以将用户过滤到这个类中.此标记可以根据需要定义多次.
