--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -12,6 +12,15 @@
 # 此配置文件中所有的密码均为随机生成,不作为固定密码使用
 # 配置文件基本使用标签格式化,部分标签没对齐不影响使用
 
+
+#-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
+# <define> 标记允许您定义 XML 样式的实体(定义服务器变量)
+<define name="ConfPath"
+        value="/etc/inspircd">
+# <path> 标记定义 config、data、log 和 module 目录的位置。此标签只能定义一次
+<path configdir="/etc/inspircd">
+
+
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<server>标签定义了本地服务器的设置.此标记只能定义一次.
 # network 的值应该在忘了上所有的服务器上都应该相同
@@ -26,7 +35,7 @@
 #<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次. 
 <admin name="ARKFUTURE admin"
        nick="arkfutureadmin"
-       email="admin@arkfuture.cn">
+       email="ADMIN@ARKFUTURE.CN">
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
@@ -92,17 +101,17 @@
 # 这里必要的话请限制登录主机 "host" 字段
 # NetAdmin：服务器管理；GlobalOp：服务器操作员；Helper：帮助员
 # 使用include来加载一个单独的操作员账户配置文件
-<include file="/etc/inspircd/.opers.conf">
+<include file="&ConfPath;/.opers.conf">
 
 
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
 #<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
 #部分命令如果没有权限就停止使用<files>标签
 #使用时请注释其中一个标签
-<files motd="/etc/inspircd/motd.txt"
-       opermotd="/etc/inspircd/opermotd.txt"
-       quotes="/etc/inspircd/quotes.txt"
-       rules="/etc/inspircd/rules.txt">
+<files motd="&ConfPath;/motd.txt"
+       opermotd="&ConfPath;/opermotd.txt"
+       quotes="&ConfPath;/quotes.txt"
+       rules="&ConfPath;/rules.txt">
 #<execfiles motd="wget -O - http://arkfuture.cn/ARKFUTURE/IRC/motd.txt"
 #           opermotd="wget -O - http://arkfuture.cn/ARKFUTURE/IRC/opermotd.txt"
 #           quotes="wget -O - http://arkfuture.cn/ARKFUTURE/IRC/quotes.txt"
@@ -132,7 +141,7 @@
          pingwarning="15"
          splitwhois="splitmsg"
          exemptchanops=""
-         xlinemessage="您被禁止,请联系管理员获取帮助"
+         xlinemessage="您被禁止,联系电子邮件 ADMIN@ARKFUTURE.CN 获取帮助"
          nosnoticestack="yes"
          defaultbind="auto">
 
@@ -230,7 +239,7 @@
 # <module name="codepage">
 
 ######TLS/SSL模块(请看官网说明,使用时需要自行删除#)
-#<include file="/etc/inspircd/.ssl.conf">
+#<include file="&ConfPath;/.ssl.conf">
 
 ######启用模块
 <module name="sasl">
@@ -343,7 +352,7 @@
 <module name="inviteexception">
 <inviteexception bypasskey="yes">
 <module name="helpop">
-<include file="/etc/inspircd/.helpop.conf">
+<include file="&ConfPath;/.helpop.conf">
 <module name="geoclass">
 <module name="exemptchanops">
 <module name="sslmodes">
