--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,16 +1,17 @@
-#inspircd<19> -- UTF-8 
+#inspircd<3.0> -- UTF-8 
 # 这只是一个或多或少可以使用的配置文件示例,此配置为ARKFUTURE-IRC使用
 # 
-# 您可以在以下文档中查询详细配置来完善此配置
-# 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
-# 以及官方的InspIRCd文档 https://docs.inspircd.org/
-# 进行详细配置
-#
 # 汉化配置文件由ARKFUTURE翻译,使用UTF-8编码
 # 添加部分说明,并完善主要功能,需要自行定制
 # 注意 ：nick为昵称,在IRC中您需要定义多个称呼(用户名和昵称)
 # 此配置文件中所有的密码均为随机生成,不作为固定密码使用
 # 配置文件基本使用标签格式化,部分标签没对齐不影响使用
+#
+###我们尽可能少用 "#" 来注释说明,因为这样可以使得下面的文档变得美观 
+# 您可以在以下文档中查询详细配置来完善此配置
+# 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
+# 以及官方的InspIRCd文档(更详细的) https://docs.inspircd.org/
+# 进行详细配置
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -23,7 +24,6 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<server>标签定义了本地服务器的设置.此标记只能定义一次.
-# network 的值应该在忘了上所有的服务器上都应该相同
 
 <server name=""
         description="ARKFUTURE-IRC"
@@ -31,11 +31,13 @@
         id="1AF">
 # ARKFUTURE irc id从1AF开始,依次往后推到9AF;0AF作为特别id
 
+
 #-#-#-#-#-#-#-#-#-#-#-#-管理员信息-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次. 
 <admin name="ARKFUTURE admin"
        nick="arkfutureadmin"
        email="ADMIN@ARKFUTURE.CN">
+
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
@@ -44,6 +46,7 @@
       port="6667-6669"
       type="clients"
       free="yes">
+
 
 #-#-#-#-#-#-#-#-#-#-#-#-连接配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<connect>标签定义了一个类,当用户连接到服务器时,可以将用户过滤到这个类中.此标记可以根据需要定义多次.
@@ -69,6 +72,7 @@
 #标记定义定位克隆时应查看的IP地址位数.此标记只能定义一次.
 <cidr ipv4clone="32"
       ipv6clone="128">
+
 
 #-#-#-#-#-#-#-#-#-#-#-#-操作员配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<class>标签定义了一组服务器操作员特权.此标记可以根据需要定义多次
@@ -112,10 +116,6 @@
        opermotd="&ConfPath;/opermotd.txt"
        quotes="&ConfPath;/quotes.txt"
        rules="&ConfPath;/rules.txt">
-#<execfiles motd="wget -O - http://arkfuture.cn/ARKFUTURE/IRC/motd.txt"
-#           opermotd="wget -O - http://arkfuture.cn/ARKFUTURE/IRC/opermotd.txt"
-#           quotes="wget -O - http://arkfuture.cn/ARKFUTURE/IRC/quotes.txt"
-#           rules="wget -O - http://arkfuture.cn/ARKFUTURE/IRC/rules.txt">
 
 #<dns>标签定义了在查找主机名时要使用的DNS服务器.此标记只能定义一次.
 <dns enabled="yes"
@@ -132,6 +132,7 @@
 <channels users=""
           opers="">
 
+
 #-#-#-#-#-#-#-#-#-#-#-#-#-服务器选项-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<options>标签定义了常规配置选项.此标记只能定义一次.
 <options prefixquit="Quit: "
@@ -144,6 +145,7 @@
          xlinemessage="您被禁止,联系电子邮件 ADMIN@ARKFUTURE.CN 获取帮助"
          nosnoticestack="yes"
          defaultbind="auto">
+
 
 #-#-#-#-#-#-#-#-#-#-#-#安全配置#-#-#-#-#-#-#-#-#-#-#-#
 #<security>标签定义了与服务器安全相关的配置选项.此标记只能定义一次.
@@ -166,6 +168,7 @@
           userstats="Pu"
           maphide="https://arkfuture.cn/#IRC">
 
+
 #-#-#-#-#-#-#-#-#-#-#-#性能配置#-#-#-#-#-#-#-#-#-#-#
 #<performance>标签定义了与服务器性能相关的配置选项.此标记只能定义一次.
 <performance clonesonconnect="yes"
@@ -174,21 +177,16 @@
              somaxconn="128"
              netbuffersize="10240">
 
+
 #-#-#-#-#-#-#-#-#-#-#-#-#-WHOWAS选项-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<whowas>标签定义了/WHOWAS数据库的配置.此标记只能定义一次.
 <whowas groupsize="10"
         maxgroups="10240"
         maxkeep="3d">
 
-#<badnick>标签定义了永久Q线.此标记可以根据需要定义多次.
-<badnick nick="ChanServ" reason="Reserved For Services">
-<badnick nick="NickServ" reason="Reserved For Services">
-<badnick nick="OperServ" reason="Reserved For Services">
-<badnick nick="MemoServ" reason="Reserved For Services">
-
 
 #-#-#-#-#-#-#-#-#-#-#-#-#限制配置#-#-#-#-#-#-#-#-#-#-#-#
- 
+#<limits> 标记定义用户可配置字段的最大长度
 <limits maxaway="200"
         maxchan="60"
         maxhost="70"
@@ -199,8 +197,6 @@
         maxquit="300"
         maxreal="130"
         maxtopic="330">
-
-# 具体解释
 #maxaway:away消息的最大长度
 #maxchan:通道名称的最大长度
 #maxhost:主机名的最大长度
@@ -212,12 +208,18 @@
 #maxreal:实名的最大长度
 #maxtopic:频道主题的最大长度
 
-#-#-#-#-#-#-#-#-#-#-#-#-#限制配置#-#-#-#-#-#-#-#-#-#-#-#
-#标记定义了限制,以防止创建过宽的X线.此标记只能定义一次.
+#<insane>标记定义了限制,以防止创建过宽的X线.此标记只能定义一次.
 <insane hostmasks="no"
         ipmasks="no"
         nickmasks="no"
         trigger="95.5">
+
+#<badnick>标签定义了永久Q线.此标记可以根据需要定义多次.
+<badnick nick="ChanServ" reason="Reserved For Services">
+<badnick nick="NickServ" reason="Reserved For Services">
+<badnick nick="OperServ" reason="Reserved For Services">
+<badnick nick="MemoServ" reason="Reserved For Services">
+
 
 #-#-#-#-#-#-#-#-#-#-#-#-#MOD(模组)#-#-#-#-#-#-#-#-#-#-#-#
 # 请阅读https://docs.inspircd.org/3/modules/
