--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -152,7 +152,7 @@
 #此配置参照(基于)官方文档修改,可自行修改
 <security allowcoreunload="no"
           announceinvites="dynamic"
-          customversion="ARKFUTURE-IRC(INSPIRCD)"
+          customversion="ARKFUTURE-IRC"
           genericoper="no"
           hidebans="yes"
           hidekills=""
