--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -15,11 +15,11 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
-# <define> 标记允许您定义 XML 样式的实体(定义服务器变量)
-<define name="ConfPath"
-        value="/etc/inspircd">
 # <path> 标记定义 config、data、log 和 module 目录的位置。此标签只能定义一次
 <path configdir="/etc/inspircd">
+# <define> 标记允许您定义 XML 样式的实体(定义服务器变量)
+<define name="ConfPath"
+        value="&dir.config;/.cf/">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -416,18 +416,10 @@
 <module name="passforward">
 <module name="pbkdf2">
 <module name="permchannels">
-<permchannels channel="#arkfuture"
-              modes=""
-              topic="中转频道|请阅读/MOTD公告|请查看/HELP帮助|请查看/RULES规则"
-              topicsetby="ARKFUTURE"
-              topicts="1706788800"
-              ts="1706788800">
-<permchannels channel="#arkfuture_studio"
-              modes=""
-              topic="工作室内部频道|请查看/HELP帮助|请查看/RULES规则"
-              topicsetby="ARKFUTURE"
-              topicts="1706788800"
-              ts="1706788800">
+<permchanneldb filename="&ConfPath;/permchannels.conf"
+               listmodes="yes"
+               operonly="yes"
+               saveperiod="5s">
 <module name="serverban">
 <module name="sethost">
 <module name="setidle">
