--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -16,7 +16,7 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
 # <path> 标记定义 config、data、log 和 module 目录的位置。此标签只能定义一次
-<path configdir="/etc/inspircd">
+<path configdir="/etc/inspircd/">
 # <define> 标记允许您定义 XML 样式的实体(定义服务器变量)
 <define name="ConfPath"
         value="&dir.config;/.cf/">
@@ -105,7 +105,7 @@
 # 这里必要的话请限制登录主机 "host" 字段
 # NetAdmin：服务器管理；GlobalOp：服务器操作员；Helper：帮助员
 # 使用include来加载一个单独的操作员账户配置文件
-<include file="&ConfPath;/.opers.conf">
+<include file="&ConfPath;/opers.conf">
 
 
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
@@ -241,7 +241,7 @@
 # <module name="codepage">
 
 ######TLS/SSL模块(请看官网说明,使用时需要自行删除#)
-#<include file="&ConfPath;/.ssl.conf">
+#<include file="&ConfPath;/ssl.conf">
 
 ######启用模块
 <module name="sasl">
@@ -354,7 +354,7 @@
 <module name="inviteexception">
 <inviteexception bypasskey="yes">
 <module name="helpop">
-<include file="&ConfPath;/.helpop.conf">
+<include file="&ConfPath;/helpop.conf">
 <module name="geoclass">
 <module name="exemptchanops">
 <module name="sslmodes">
