--- a/ARKFUTURE/IRC/conf/ssl.conf
+++ b/ARKFUTURE/IRC/conf/ssl.conf
@@ -20,15 +20,15 @@
 <openssl onrehash="yes">
 <sslprofile name="Clients"
             provider="openssl"
-            cafile="/etc/inspircd/.ca/ca.pem"
-            certfile="/etc/inspircd/.ca/cert.pem"
+            cafile="/etc/inspircd/ca/ca.pem"
+            certfile="/etc/inspircd/ca/cert.pem"
             crlfile=""
             ciphers="DEFAULT"
             compression="no"
-            dhfile="/etc/inspircd/.ca/dhparams.pem"
+            dhfile="/etc/inspircd/ca/dhparams.pem"
             ecdhcurve="prime256v1"
             hash="sha256"
-            keyfile="/etc/inspircd/.ca/key.pem"
+            keyfile="/etc/inspircd/ca/key.pem"
             renegotiation="no"
             requestclientcert="yes"
             tlsv1="no"
