--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -354,6 +354,7 @@
 <module name="inviteexception">
 <inviteexception bypasskey="yes">
 <module name="helpop">
+<helpmsg nohelp="您搜索的主题没有任何帮助.请再试一次.">
 <include file="&ConfPath;/helpop.conf">
 <module name="geoclass">
 <module name="exemptchanops">
