--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -105,17 +105,17 @@
 # 这里必要的话请限制登录主机 "host" 字段
 # NetAdmin：服务器管理；GlobalOp：服务器操作员；Helper：帮助员
 # 使用include来加载一个单独的操作员账户配置文件
-<include file="&ConfPath;/opers.conf">
+<include file="&ConfPath/opers.conf">
 
 
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
 #<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
 #部分命令如果没有权限就停止使用<files>标签
 #使用时请注释其中一个标签
-<files motd="&ConfPath;/motd.txt"
-       opermotd="&ConfPath;/opermotd.txt"
-       quotes="&ConfPath;/quotes.txt"
-       rules="&ConfPath;/rules.txt">
+<files motd="&ConfPath/motd.txt"
+       opermotd="&ConfPath/opermotd.txt"
+       quotes="&ConfPath/quotes.txt"
+       rules="&ConfPath/rules.txt">
 
 #<dns>标签定义了在查找主机名时要使用的DNS服务器.此标记只能定义一次.
 <dns enabled="yes"
@@ -241,7 +241,7 @@
 # <module name="codepage">
 
 ######TLS/SSL模块(请看官网说明,使用时需要自行删除#)
-#<include file="&ConfPath;/ssl.conf">
+#<include file="&ConfPath/ssl.conf">
 
 ######启用模块
 <module name="sasl">
@@ -355,7 +355,7 @@
 <inviteexception bypasskey="yes">
 <module name="helpop">
 <helpmsg nohelp="您搜索的主题没有任何帮助.请再试一次.">
-<include file="&ConfPath;/helpop.conf">
+<include file="&ConfPath/helpop.conf">
 <module name="geoclass">
 <module name="exemptchanops">
 <module name="sslmodes">
@@ -417,7 +417,7 @@
 <module name="passforward">
 <module name="pbkdf2">
 <module name="permchannels">
-<permchanneldb filename="&ConfPath;/permchannels.conf"
+<permchanneldb filename="&ConfPath/permchannels.conf"
                listmodes="yes"
                operonly="yes"
                saveperiod="5s">
