--- a/ARKFUTURE/IRC/conf/permchannels.conf
+++ b/ARKFUTURE/IRC/conf/permchannels.conf
@@ -1,16 +1,4 @@
-#permchannels<3> -- UTF-8 
-<config format="xml">
+#permchannels<> -- UTF-8 
 
 
-<permchannels channel="#arkfuture"
-              modes=""
-              topic="中转频道|请阅读/MOTD公告|请查看/HELP帮助|请查看/RULES规则"
-              topicsetby="ARKFUTURE"
-              topicts="1706788800"
-              ts="1706788800">
-<permchannels channel="#arkfuture_studio"
-              modes=""
-              topic="工作室内部频道|请查看/HELP帮助|请查看/RULES规则"
-              topicsetby="ARKFUTURE"
-              topicts="1706788800"
-              ts="1706788800">
+
