--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -237,7 +237,6 @@
 # <module name="sqlauth">
 # <module name="sqloper">
 # <module name="xline_db">
-# <module name="nationalchars"> 
 # <module name="codepage">
 
 ######TLS/SSL模块(请看官网说明,使用时需要自行删除#)
@@ -266,7 +265,6 @@
        prefix="AFE-"
        suffix="-EFA"
        ignorecase="yes">
-<module name="clones">
 <module name="dccallow">
 <banfile action="allow"
          pattern="*">
@@ -428,7 +426,6 @@
 <module name="showwhois">
 <module name="silence">
 <module name="vhost">
-<module name="userip">
 <module name="watch">
 <module name="topiclock">
 <module name="sajoin">
@@ -443,9 +440,7 @@
 <module name="operjoin">
 <operjoin channel="#OP_OP"
           override="yes">
-<module name="nopartmsg">
 <module name="mlock">
-<module name="hostchange">
 <module name="hidemode">
 <module name="hidelist">
 <module name="gecosban">
@@ -453,3 +448,9 @@
 <module name="chgname">
 <module name="classban">
 <module name="channames">
+
+######在INSPIRCDv4中即将修改或废弃迁移的模块特别标注
+<module name="clones">
+<module name="hostchange">
+<module name="nopartmsg">
+<module name="userip">
