--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,5 +1,6 @@
 #inspircd<10> -- UTF-8 
 # 这只是一个或多或少可以使用的配置文件示例,此配置为ARKFUTURE-IRC使用
+# 在配置文件<10+>之后，我们将做好迁移到v4的准备
 # 
 # 汉化配置文件由ARKFUTURE翻译,使用UTF-8编码
 # 添加部分说明,并完善主要功能,需要自行定制
@@ -16,7 +17,11 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
 # <path> 标记定义 config、data、log 和 module 目录的位置。此标签只能定义一次
-<path configdir="/etc/inspircd/">
+<path configdir="/etc/inspircd/"
+      datadir="&dir.data;"
+      logdir="&dir.log;"
+      moduledir="&dir.module;"
+      runtimedir="&dir.runtime;">
 # <define> 标记允许您定义 XML 样式的实体(定义服务器变量)
 <define name="ConfPath"
         value="&dir.config;/conf/">
@@ -33,8 +38,8 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-管理员信息-#-#-#-#-#-#-#-#-#-#-#-#-#
-#<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次. 
-<admin name="ARKFUTURE admin"
+#<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次. (v4更改！)
+<admin name="arkfutureadmin"
        nick="arkfutureadmin"
        email="ADMIN@ARKFUTURE.CN">
 
@@ -67,7 +72,9 @@
          softsendq="8192"
          threshold="20"
          timeout="60"
-         uniqueusername="no">
+         uniqueusername="no"
+         password=""
+         hash="">
 
 #标记定义定位克隆时应查看的IP地址位数.此标记只能定义一次.
 <cidr ipv4clone="32"
@@ -89,17 +96,20 @@
 <class name="HostCloak"
        commands="SETHOST SETIDENT CHGNAME CHGHOST CHGIDENT">
 
-#<type>标签定义了服务器操作员的类型.此标记可以根据需要定义多次.
+#<type>标签定义了服务器操作员的类型.此标记可以根据需要定义多次. (v4更改！)
 # 这里必要的话请限制登录主机 "host" 字段
 <type name="NetAdmin"
        classes="OperChat BanControl HostCloak Shutdown ServerLink"
-       host="">
+       host=""
+       vhost="iadm.arkfuture.cn">
 <type name="GlobalOp"
        classes="OperChat BanControl HostCloak ServerLink"
-       host="">
+       host=""
+       vhost="igop.arkfuture.cn">
 <type name="Helper"
        classes="HostCloak"
-       host="">
+       host=""
+       vhost="ihep.arkfuture.cn">
 
 #<oper>标签定义了一个服务器操作员帐户.此标记可以根据需要定义多次.
 # 这里必要的话请限制登录主机 "host" 字段
@@ -120,7 +130,9 @@
 #<dns>标签定义了在查找主机名时要使用的DNS服务器.此标记只能定义一次.
 <dns enabled="yes"
      server="8.8.8.8"
-     timeout="5s">
+     timeout="5s"
+     sourceip=""
+     sourceport="0">
 
 #<pid>标签定义了pid文件的位置.此标记只能定义一次.
 <pid file="/var/run/inspircd/inspircd.pid">
@@ -134,7 +146,7 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#-服务器选项-#-#-#-#-#-#-#-#-#-#-#-#-#
-#<options>标签定义了常规配置选项.此标记只能定义一次.
+#<options>标签定义了常规配置选项.此标记只能定义一次.(v4更改！)
 <options prefixquit="Quit: "
          syntaxhints="no"
          announcets="yes"
@@ -170,7 +182,7 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#性能配置#-#-#-#-#-#-#-#-#-#-#
-#<performance>标签定义了与服务器性能相关的配置选项.此标记只能定义一次.
+#<performance>标签定义了与服务器性能相关的配置选项.此标记只能定义一次.(v4更改！)
 <performance clonesonconnect="yes"
              quietbursts="yes"
              softlimit="15000"
@@ -221,7 +233,7 @@
 <badnick nick="MemoServ" reason="Reserved For Services">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#MOD(模组)#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#MOD(模组)#-#-#-#-#-#-#-#-#-#-#-#(v4更改！)
 # 请阅读https://docs.inspircd.org/3/modules/
 # 其他模块配置请自行修改使用
 # 我们使用:导入MOD后立即跟MOD配置文件 的方式配置
