--- a/ARKFUTURE/IRC/conf/opers.conf
+++ b/ARKFUTURE/IRC/conf/opers.conf
@@ -23,16 +23,8 @@
 
 <oper name="arkfutureadmin"
       password="P03iZjRtmpqXPv3"
+      hash=""
       host="*@*"
+      autologin="strict"
       type="NetAdmin"
       vhost="iadm.arkfuture.cn">
-<oper name="arkfutureop"
-      password="P03iZjRtmpqXPv3"
-      host="*@*"
-      type="GlobalOp"
-      vhost="igop.arkfuture.cn">
-<oper name="arkfuturehelper"
-      password="P03iZjRtmpqXPv3"
-      host="*@*"
-      type="Helper"
-      vhost="ihep.arkfuture.cn">
