--- a/ARKFUTURE/IRC/conf/modulesconf.conf
+++ b/ARKFUTURE/IRC/conf/modulesconf.conf
@@ -92,3 +92,16 @@
 <operjoin channel="#OP_OP"
           override="yes">
 
+###cloak
+<cloak method="account"
+       class=""
+       invalidchar="strip"
+       prefix="AFE-"
+       suffix="-EFA">
+
+###xlinedb
+<xlinedb filename="&ConfPath;/xline.db"
+         saveperiod="5s"
+         backoff="2"
+         maxbackoff="5m">
+
