--- a/ARKFUTURE/Suricata/suricata.yaml
+++ b/ARKFUTURE/Suricata/suricata.yaml
@@ -87,7 +87,7 @@ outputs:
   - msmtp:
       enabled: yes
       filename: suricata_alerts.txt
-      msmtprc: /etc/msmtp/msmtprc
+      msmtprc: /etc/msmtprc
 
   # json格式的可扩展事件格式(昵称为eve)事件日志
   - eve-log:
