--- a/ARKFUTURE/Conky/conkyrc.conf
+++ b/ARKFUTURE/Conky/conkyrc.conf
@@ -72,7 +72,7 @@ conky.config = {
     --override_utf8_locale,
     --overwrite_file,
     --own_window = true,
-    --own_window_argb_value = yes,
+    --own_window_argb_value = 0,
     --own_window_argb_visual = no,
     --own_window_class = 'Conky',
     --own_window_colour = 'black',
