--- a/ARKFUTURE/Conky/conkyrc.conf
+++ b/ARKFUTURE/Conky/conkyrc.conf
@@ -111,14 +111,13 @@ conky.config = {
 
 conky.text = [[
  
-${color grey}${font StyleBats:size=16}E${font :size=10}   内存 $stippled_hr
-${color #F05020}内存 : $mem/$memmax - $memperc% ${membar 6}
-/:  ${fs_used /}/${fs_size /}         ${fs_bar 6 /}
- 
-${color grey} ${font PizzaDude Bullets:size=16}@${font OpenLogos:size=10}   网络 $stippled_hr
-${color grey}使用中:
-${color green} 上传:${downspeed enp0s3} KB/s $alignr ${totaldown enp0s3}
-${color green} 下载:${upspeed enp0s3} KB/s $alignr ${totalup enp0s3}
+conky.text = [[
+    
+${color lightgrey}Down:${color lightgrey}${alignr}${downspeedf eth0} KiB/s
+${downspeedgraph eth0 80,}
+${color lightgrey}UP:${color lightgrey}${alignr}${upspeedf eth0} KiB/s 
+${upspeedgraph eth0 80,} 
+${color lightgrey}LOCAL:${color lightgrey}${alignr}${addrs}
 ${color green} 公网地址:${color green} $alignr ${execi 3600 }
 
 ]]
