--- a/ARKFUTURE/Conky/conkyrc.conf
+++ b/ARKFUTURE/Conky/conkyrc.conf
@@ -1,56 +1,39 @@
 conky.config = {
     
-    --alignment = 'top_right',
-    --append_file,
-    --background = no,
-    --border_inner_margin,
-    --border_outer_margin,
-    --border_width = 1,
-    --colorN,
-    --console_bar_fill = '#',
-    --console_bar_unfill = '.',
-    --console_graph_ticks,
-    --cpu_avg_samples = 2,
-    --default_bar_height = 6,
-    --default_bar_width = 0,
-    --default_color = 'lightgrey',
-    --default_gauge_height = 25,
-    --default_gauge_width = 40,
-    --default_graph_height = 25,
-    --default_graph_width = 0,
-    --default_outline_color = 'white',
-    --default_shade_color = 'white',
-    --detect_battery = 'BAT0',
-    --disable_auto_reload,
-    --diskio_avg_samples,
-    --display,
-    --double_buffer=yes,
-    --draw_blended = yes,
-    --draw_borders = false,
-    --draw_graph_borders = true,
-    --draw_outline = false,
-    --draw_shades = false,
-    --extra_newline = false,
-    --font,
-    --fontN,
-    --forced_redraw,
-    --format_human_readable,
-    --gap_x = 15,
-    --gap_y = 60,
+    alignment = 'top_right',
+
+    background = no,
+    border_width = 1,
+
+    cpu_avg_samples = 2,
+
+    default_color = 'white',
+    default_outline_color = 'white',
+    default_shade_color = 'white',
+    double_buffer = true,
+    --draw_blended = true,
+    draw_borders = false,
+    draw_graph_borders = true,
+    draw_outline = false,
+    draw_shades = false,
+
+    font = 'DejaVu Sans Mono:size=12',
+
+    gap_x = 0,
+    gap_y = 0,
     --github_token = '',
+
     --hddtemp_host ='127.0.0.1',
     --hddtemp_port = 7634,
     --http_port = 10080,
-    --http_refresh = no,
-    --if_up_strictness,
-    --imap=,
-    --mail_spool,
+    --http_refresh = false,
+
     --max_port_monitor_connections = 256,
     --max_text_width=integer_number,
     --max_user_text=16384,
     --maximum_width = 200,
-    --minimum_height = 50,
-    --minimum_width = 200,
+    minimum_height = 210,
+    minimum_width = 250,
     --mpd_host = '127.0.0.1',
     --mpd_password = '',
     --mpd_port,
@@ -60,59 +43,42 @@ conky.config = {
     --mysql_password,
     --mysql_port = 3306,
     --mysql_user,
-    --net_avg_samples = 2,
-    --no_buffers = no,
+
+    net_avg_samples = 2,
+    no_buffers = true,
     --nvidia_display = '$DISPLAY ',
-    --out_to_console = false,
+
+    out_to_console = false,
     --out_to_http,
-    --out_to_ncurses,
-    --out_to_stderr = false,
-    --out_to_wayland = no,
-    --out_to_x = yes,
-    --override_utf8_locale,
-    --overwrite_file,
-    --own_window = true,
-    --own_window_argb_value = 0,
-    --own_window_argb_visual = no,
-    --own_window_class = 'Conky',
-    --own_window_colour = 'black',
-    --own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
-    --own_window_title = 'ARKFUTURE <hostname>',
-    --own_window_transparent = yes,
-    --own_window_type = 'normal',
-    --pad_percents = 0,
-    --pop3=,
-    --short_units = no,
-    --show_graph_range = false,
-    --show_graph_scale = false,
-    --graph_gradient_mode = 'rgb',
-    --stippled_borders = 0,
-    --store_graph_data_explicitly,
-    --temperature_unit = 'celsius',
-    --templateN,
-    --text_buffer_size = 256,
-    --times_in_seconds,
-    --top_cpu_separate,
-    --top_name_verbose,
-    --top_name_width = 15,
-    --total_run_times = 0,
-    --units_spacer,
-    --update_interval = 3.0,
-    --update_interval_on_battery = seconds,
-    --uppercase = false,
-    --use_spacer = 'none',
-    --use_xft = true,
-    --xftalpha,
-    --xinerama_head,
+    out_to_ncurses = false,
+    out_to_stderr = false,
+    --out_to_wayland = false,
+    --out_to_x = true,
+    own_window = true,
+    own_window_argb_value = 0,
+    own_window_argb_visual = true,
+    own_window_class = 'Conky',
+    own_window_colour = 'black',
+    own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
+    own_window_transparent = false,
+    own_window_type = 'normal',
+
+    show_graph_range = false,
+    show_graph_scale = false,
+    stippled_borders = 0,
+
+    update_interval = 1.0,
+    uppercase = false,
+    use_spacer = 'none',
+    use_xft = true,
+
     
 
 }
 
 
 conky.text = [[
- 
-conky.text = [[
-    
+
 ${color lightgrey}Down:${color lightgrey}${alignr}${downspeedf eth0} KiB/s
 ${downspeedgraph eth0 80,}
 ${color lightgrey}UP:${color lightgrey}${alignr}${upspeedf eth0} KiB/s 
