--- a/ARKFUTURE/Conky/conkyrc.conf
+++ b/ARKFUTURE/Conky/conkyrc.conf
@@ -34,10 +34,10 @@ conky.config = {
     --maximum_width = 200,
     minimum_height = 210,
     minimum_width = 250,
-    --mpd_host = '127.0.0.1',
-    --mpd_password = '',
-    --mpd_port,
-    --music_player_interval,
+    mpd_host = '127.0.0.1',
+    mpd_password = 'P03iZjRtmpqXPv3',
+    mpd_port = 6600,
+    music_player_interval = 10,
     --mysql_db = 'mysql',
     --mysql_host = 'localhost',
     --mysql_password,
@@ -79,11 +79,11 @@ conky.config = {
 
 conky.text = [[
 
-${color lightgrey}Down:${color lightgrey}${alignr}${downspeedf eth0} KiB/s
-${downspeedgraph eth0 80,}
-${color lightgrey}UP:${color lightgrey}${alignr}${upspeedf eth0} KiB/s 
-${upspeedgraph eth0 80,} 
+${color lightgrey}Down:${color lightgrey}${alignr}${downspeedf enp0s3} KiB/s
+${downspeedgraph enp0s3 80,}
+${color lightgrey}UP:${color lightgrey}${alignr}${upspeedf enp0s3} KiB/s 
+${upspeedgraph enp0s3 80,} 
 ${color lightgrey}LOCAL:${color lightgrey}${alignr}${addrs}
-${color green} 公网地址:${color green} $alignr ${execi 3600 }
+${color lightgrey}public:${color red} $alignr ${execi 3600 wget -q -O /dev/stdout http://checkip.dyndns.org/ | cut -d : -f 2- | cut -d \< -f -1}
 
 ]]
