--- a/ARKFUTURE/MPD/mpd.conf
+++ b/ARKFUTURE/MPD/mpd.conf
@@ -11,8 +11,6 @@
 # 
 # 
 # 
-# 
-#
 music_directory		"/var/lib/mpd/music"
 #
 # 此设置设置MPD内部播放列表目录
@@ -53,12 +51,12 @@ db_file			"/var/lib/mpd/tag_cache"
 # 它被推倒了。默认情况下禁用此设置，并且服务器
 # 状态将在服务器启动时重置.
 #
-state_file			"/var/lib/mpd/state"
+#state_file			"/var/lib/mpd/state"
 #
 # 贴纸数据库的位置.  这是一个数据库管理附加到歌曲的动态信息
 # 
 #
-sticker_file                   "/var/lib/mpd/sticker.sql"
+#sticker_file                   "/var/lib/mpd/sticker.sql"
 #
 ###############################################################################
 
@@ -168,11 +166,11 @@ zeroconf_name			"ARKFUTURE MPD Server @ %h"
 # 如果设置了此设置，MPD将需要密码授权. 
 # 可以为不同的密码配置文件多次指定设置
 #
-#password                        "P03iZjRtmpqXPv3@read,add,control,admin"
+password                        "P03iZjRtmpqXPv3@read,add,control,admin"
 #
 # This setting specifies the permissions a user has who has not yet logged in.
 #
-#default_permissions             "read,add,control,admin"
+default_permissions             "read,add,control,admin"
 #
 ###############################################################################
 
@@ -306,13 +304,13 @@ decoder {
 # Please see README.Debian if you want mpd to play through the pulseaudio
 # daemon started as part of your graphical desktop session!
 #
-#audio_output {
-#	type		"pulse"
-#	name		"My Pulse Output"
+audio_output {
+	type		"pulse"
+	name		"My Pulse Output"
 ##	server		"remote_server"		# optional
 ##	sink		"remote_server_sink"	# optional
 ##	media_role	"media_role"		#optional
-#}
+}
 #
 # An example of a winmm output (Windows multimedia API).
 #
