--- a/ARKFUTURE/Conky/conkyrc.conf
+++ b/ARKFUTURE/Conky/conkyrc.conf
@@ -34,10 +34,10 @@ conky.config = {
     --maximum_width = 200,
     minimum_height = 210,
     minimum_width = 250,
-    mpd_host = '127.0.0.1',
-    mpd_password = 'P03iZjRtmpqXPv3',
-    mpd_port = 6600,
-    music_player_interval = 10,
+    --mpd_host = '127.0.0.1',
+    --mpd_password = 'P03iZjRtmpqXPv3',
+    --mpd_port = 6600,
+    --music_player_interval = 10,
     --mysql_db = 'mysql',
     --mysql_host = 'localhost',
     --mysql_password,
