--- a/ARKFUTURE/Suricata/suricata.yaml
+++ b/ARKFUTURE/Suricata/suricata.yaml
@@ -22,7 +22,7 @@ vars:
     #HOME_NET: "[172.16.0.0/12]"
     #HOME_NET: "any"
 
-    #EXTERNAL_NET: "!$HOME_NET"
+    EXTERNAL_NET: "!$HOME_NET"
     #EXTERNAL_NET: "any"
 
     HTTP_SERVERS: "$HOME_NET"
