--- a/ARKFUTURE/IRC/v3cof/inspircd.conf
+++ b/ARKFUTURE/IRC/v3cof/inspircd.conf
@@ -1,6 +1,5 @@
-#inspircd<10.v3> -- UTF-8 --INSPIRCD v3
+#inspircd<0.1> -- UTF-8 --INSPIRCD v3
 # 这只是一个或多或少可以使用的配置文件示例,此配置为ARKFUTURE-IRC使用
-# 注意:在配置文件<10+>之后,我们将做好迁移到v4的准备,mod也随之替换,之后,我们将分为两个版本的配置文件
 # ARKFUTURE翻译,使用UTF-8编码
 # 添加部分说明,并完善主要功能,需要自行定制
 # 注意 ：nick为昵称,在IRC中您需要定义多个称呼(用户名和昵称)
