--- a/ARKFUTURE/IRC/v4cof/inspircd.conf
+++ b/ARKFUTURE/IRC/v4cof/inspircd.conf
@@ -1,6 +1,6 @@
-#inspircd<11.v4> -- UTF-8 --INSPIRCD v4
+#inspircd<0.1> -- UTF-8 --INSPIRCD v4
 # 这只是一个或多或少可以使用的配置文件示例,此配置为ARKFUTURE-IRC使用
-# ARKFUTURE翻译
+# ARKFUTURE翻译,使用UTF-8编码
 # 添加部分说明,并完善主要功能,需要自行定制
 # 注意 ：nick为昵称,在IRC中您需要定义多个称呼(用户名和昵称)
 # 此配置文件中所有的密码均为随机生成,不作为固定密码使用
