--- a/ARKFUTURE/xl2tpd/xl2tpd.conf
+++ b/ARKFUTURE/xl2tpd/xl2tpd.conf
@@ -1,11 +1,15 @@
 [global]
+port = 1701
+auth file = /etc/xl2tpd/xl2tp-secrets
+access control = no
 [lns default]
+exclusive = yes
 ip range = 192.168.0.100-192.168.0.200
 local ip = 192.168.0.1
+length bit = yes
 require chap = yes
 refuse pap = yes
 require authentication = yes
 name = ARKFUTUREvpn
 ppp debug = yes
 pppoptfile = /etc/ppp/options.xl2tpd
-length bit = yes
