--- a/ARKFUTURE/xl2tpd/ipsec.conf
+++ b/ARKFUTURE/xl2tpd/ipsec.conf
@@ -3,7 +3,7 @@ config setup
   nat_traversal=yes
   oe=off
   protostack=netkey
-conn myvpn
+conn ARKFUTUREvpn
 	auto=add
 	authby=secret
 	pfs=no
@@ -14,3 +14,15 @@ conn myvpn
 	rightprotoport=17/%any
 	rekey=no
 	keyingtries=5
+
+	
+conn psk-example
+    keyexchange=ikev2
+    ike=aes256-sha2_256
+    esp=aes256-sha2_256
+    left=%any
+    leftsubnet=0.0.0.0/0
+    right=%any
+    rightsubnet=0.0.0.0/0
+    authby=ARKFUTUREvpn
+    presharedkey=预共享密钥
