--- a/ARKFUTURE/xl2tpd/ipsec.conf
+++ b/ARKFUTURE/xl2tpd/ipsec.conf
@@ -1,8 +1,8 @@
 config setup
-  dumpdir=/var/run/pluto
   nat_traversal=yes
   oe=off
   protostack=netkey
+  
 conn ARKFUTUREvpn
 	auto=add
 	authby=secret
@@ -15,8 +15,8 @@ conn ARKFUTUREvpn
 	rekey=no
 	keyingtries=5
 
-	
 conn psk-example
+	auto=add
     keyexchange=ikev2
     ike=aes256-sha2_256
     esp=aes256-sha2_256
